Bug fixes and styling

--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
                     <!-- <div class="display">&nbsp;</div> -->
                     <div class="display">&nbsp;</div>
                 </div>
-                <button class="button clear" data-clear value="clear">Clear</button>
-                <button class="button delete" data-delete value="del">Delete</button>
-                <button class="button operators" data-operator value="/">%</button>
+                <button class="button clear" data-clear value="clear">C</button>
+                <button class="button delete" data-delete value="del">CE</button>
+                <button class="button operators" data-operator value="%">%</button>
                 <button class="button operators add" data-operator value="+">+</button>
-                <button class="button numbers" data-number value="1">1</button>
-                <button class="button numbers" data-number value="2">2</button>
-                <button class="button numbers" data-number value="3">3</button>
+                <button class="button numbers" data-number value="7">7</button>
+                <button class="button numbers" data-number value="8">8</button>
+                <button class="button numbers" data-number value="9">9</button>
                 <button class="button operators multiply" data-operator value="*">*</button>
                 <button class="button numbers" data-number value="4">4</button>
                 <button class="button numbers" data-number value="5">5</button>
                 <button class="button numbers" data-number value="6">6</button>
                 <button class="button operators divide" data-operator value="/">/</button>
-                <button class="button numbers" data-number value="7">7</button>
-                <button class="button numbers" data-number value="8">8</button>
-                <button class="button numbers" data-number value="9">9</button>
+                <button class="button numbers" data-number value="1">1</button>
+                <button class="button numbers" data-number value="2">2</button>
+                <button class="button numbers" data-number value="3">3</button>
                 <button class="button operators minus" data-operator value="-">-</button>
                 <button class="button numbers" data-number value="0">0</button>
-                <button class="button numbers" data-number value=".">.</button>
+                <button class="button numbers decimal" data-number value=".">.</button>
                 <button class="button operators equals" data-equals value="=">=</button>
             </div>
         </div>
