--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="calculator">
             <div class="calculator-grid">
                 <div class="output">
-                    <!-- <div class="display">&nbsp;</div> -->
                     <div class="display">&nbsp;</div>
+                    <div class="result">&nbsp;</div>
                 </div>
                 <button class="button clear" data-clear value="clear">C</button>
                 <button class="button delete" data-delete value="del">CE</button>
